[gd_scene load_steps=2 format=2]

[ext_resource path="res://Fragments/HourlyContent.gd" type="Script" id=1]

[node name="HourlyContent" type="VBoxContainer"]
anchor_right = 1.0
script = ExtResource( 1 )

[node name="ContentInfo" type="HBoxContainer" parent="."]
margin_right = 500.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="ContentThumbnail" type="TextureRect" parent="ContentInfo"]
margin_bottom = 14.0

[node name="ContentTitle" type="Label" parent="ContentInfo"]
margin_left = 4.0
margin_right = 500.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Content Title"
clip_text = true

[node name="UserList" type="VBoxContainer" parent="."]
margin_top = 18.0
margin_right = 500.0
margin_bottom = 18.0
